# ocaml-rs-smartptr

./: .gitignore  .ocamlformat-ignore  Cargo.toml  NOTICE  README.md  crates.js  dune  dune-project  help.html  index.html  ocaml-rs-smartptr.opam  ocaml-rs-smartptr.opam.template  search-index.js  settings.html  src-files.js
.devcontainer/: devcontainer.json  install.sh
.devcontainer/features/: .gitrepo
.devcontainer/features/common/: devcontainer-feature.json
.devcontainer/features/git-tools/: install.sh
.devcontainer/features/opam-switch/: devcontainer-feature.json
.devcontainer/features/project-deps/: devcontainer-feature.json  install.sh
.github/workflows/: rust.yml
lib/: dune  registry.ml  rusty_obj.ml
macro/: Cargo.toml
macro/src/: lib.rs
ocaml_rs_smartptr/: all.html  index.html  macro.ocaml_export!.html  macro.ocaml_export.html  macro.ocaml_gen_bindings!.html  macro.ocaml_gen_bindings.html  macro.register_rtti!.html  macro.register_rtti.html  macro.register_trait!.html  macro.register_trait.html  macro.register_type.html  sidebar-items.js
ocaml_rs_smartptr/callable/: index.html  trait.Callable.html
ocaml_rs_smartptr/func/: index.html  sidebar-items.js  struct.OCamlFunc.html
ocaml_rs_smartptr/ml_box/: index.html  sidebar-items.js  struct.MlBox.html
ocaml_rs_smartptr/ocaml_gen_extras/: fn.stubs_gen_main.html  index.html  sidebar-items.js  struct.OcamlGenPlugin.html  struct.P1.html  struct.P2.html  struct.P3.html  struct.PolymorphicValue.html  struct.WithTypeParams.html  trait.TypeParams.html
ocaml_rs_smartptr/ptr/: index.html  sidebar-items.js  struct.DynBox.html
ocaml_rs_smartptr/registry/: fn.coerce.html  fn.coerce_mut.html  fn.get_type_info.html  fn.initialize_plugins.html  fn.register.html  fn.register_type.html  fn.register_type_info.html  index.html  sidebar-items.js  struct.Plugin.html  struct.TypeInfo.html  type.Handle.html  type.HandleMut.html
ocaml_rs_smartptr/stubs/: fn.ocaml_rs_smartptr_init_registry.html  index.html  sidebar-items.js
rust-staticlib/: Cargo.toml  dune  dune.inc  lib.rs
search.desc/ocaml_rs_smartptr/: ocaml_rs_smartptr-desc-0-.js
src/: callable.rs  func.rs  lib.rs  ml_box.rs  ocaml_gen_extras.rs  ptr.rs  registry.rs  stubs.rs  type_name.rs
src/ocaml_rs_smartptr/: callable.rs.html  func.rs.html  lib.rs.html  ml_box.rs.html  ocaml_gen_extras.rs.html  ptr.rs.html  registry.rs.html  stubs.rs.html  type_name.rs.html
stubs-gen/: Cargo.toml  dune  stubs-gen.rs
test/: Cargo.toml  README.md  Some_other_lib.ml  Stubs.ml  dune  test.expected  test.ml
test/lib/: dune
test/src/: animals.rs  lib.rs  stubs.rs
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/convert/: trait.AsMut.js  trait.AsRef.js  trait.From.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/ops/deref/: trait.Deref.js  trait.DerefMut.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/inventory/: trait.Collect.js
trait.impl/ocaml/value/: trait.FromValue.js  trait.ToValue.js
trait.impl/ocaml_gen/: trait.OCamlBinding.js  trait.OCamlDesc.js
trait.impl/ocaml_rs_smartptr/ocaml_gen_extras/: trait.TypeParams.js
type.impl/owning_ref/: type.ErasedBoxRefMut.js
