[package]
name = "ocaml-rs-smartptr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
ocaml = "1.0.1"
owning_ref = "0.4.1"
stable_deref_trait = "1.2"
static_assertions = "1.1.0"
ocaml-gen = "0.1.5"
regex = "1"

[dev-dependencies]
serial_test = "*"

[workspace]
members = [
    ".",
    "macro",
    "test"
]
