[package]
name = "ocaml-rs-smartptr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
ocaml-rs-smartptr-macro = { path = "macro", version = "*" }
ocaml = "1.1.0"
owning_ref = "0.4.1"
stable_deref_trait = "1.2"
static_assertions = "1.1.0"
ocaml-gen = "0.1.5"
regex = "1"
paste = "1.0.15"
rand = "0.8.5"
highway = "1.2.0"
inventory = "0.3.15"
derive_more = { version="1.0.0", features = ["full"] }

[dev-dependencies]
serial_test = "*"

[workspace]
members = [
    ".",
    "macro",
    "test",
    "stubs-gen",
    "rust-staticlib"
]

[patch.crates-io]
ocaml-gen = { git = "https://github.com/Lupus/ocaml-gen.git" }

# See https://github.com/dtolnay/linkme/issues/61
[profile.dev]
lto = "thin"
