(rule
 (alias runtest)
 (targets stubs-gen)
 (deps
  stubs-gen.rs
  (alias %{workspace_root}/rust-staticlib/rust-universe))
 (locks cargo-build)
 (action
  (run
   dune-cargo-build
   --profile=%{profile}
   --workspace-root=%{workspace_root}
   ./Cargo.toml)))

(rule
 (alias runtest)
 (targets Ocaml_rs_smartptr_test.ml)
 (action
  (progn
   (run ./stubs-gen)
   (run ocamlformat -i %{targets}))))
