[package]
name = "ocaml-rs-smartptr-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "main2"
path = "bin/main2.rs"

[dependencies]
ocaml-rs-smartptr = {path="../"}
ocaml = "1.1.0"
ocaml-gen = "0.1.5"
rustdoc-json = "0.9.2"
rustdoc-types = "0.28.0"
serde_json = "1.0"
derive_more = "0.99.18"
cargo-lock = {version="9.0.0",features=["dependency-tree"]}
cargo_metadata = "0.18.1"
codegen = "0.1.3"
