(executable
 (name test)
 (libraries ocaml-rs-smartptr ocaml_rs_smartptr_stubs))

(rule
 (action
  (copy %{workspace_root}/stubs-gen/Ocaml_rs_smartptr_test.ml Stubs.ml.new)))

(rule
 (alias runtest)
 (action
  (diff Stubs.ml Stubs.ml.new)))

(rule
 (with-stdout-to
  test.out
  (run ./test.exe)))

(rule
 (alias runtest)
 (action
  (diff test.expected test.out)))
